<resources>
    <string name="app_name">Viajary</string>
    <string name="action_settings">Settings</string>

    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="take_photo">Take Photo</string>
    <string name="record">Record a note</string>
    <string name="play">Play the note</string>
    <string name="add_trip">Add Trip</string>
    <string name="google_maps_key">AIzaSyBANtXQX9AMGYbkXTCw77anQkFmgTghGh4</string>
    <string name="expenses">Expenses(%1$s)</string>
    <string name="currency"> </string>
    <string name="title_activity_trips">TripsActivity</string>
    <string name="start_date">Start Date: %1$s</string>
    <string name="end_date">End Date: %1$s</string>
    <string name="expenses_list_item">Expenses: %1$s</string>

    <string name="no_trips_found">No trips found</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="new_trip_title">Trip title: </string>
    <string name="new_trip_start_date">Start date: </string>
    <string name="new_trip_end_date">End date: </string>
    <string name="new_trip_expenses">Expenses to record: </string>
    <string name="new_trip_save">Save</string>
    <string name="new_trip_from">From: </string>
    <string name="new_trip_to">To: </string>
    <string name="transport">Transport To-From</string>
    <string name="food">Food</string>
    <string name="activities">Activities</string>
    <string name="hotel">Hotel</string>
    <string name="car_rental">Car Rental</string>
    <string name="fuel">Fuel</string>
    <string name="city_transport">City Transport</string>
    <string name="others">Others</string>
    <string name="select_date">Select Date</string>
</resources>
